crates/falcon_dart_parser/tests/snapshots/parser_tests__snap_enum_simple.snap
---
source: crates/falcon_dart_parser/tests/parser_tests.rs
expression: "prog.declarations[0]"
---
Enum(
    EnumDecl {
        annotations: [],
        name: Identifier {
            name: "Color",
            span: Span {
                start: 5,
                end: 10,
            },
        },
        type_params: [],
        with_clause: [],
        implements: [],
        variants: [
            EnumVariant {
                annotations: [],
                name: Identifier {
                    name: "red",
                    span: Span {
                        start: 13,
                        end: 16,
                    },
                },
                type_args: [],
                constructor_name: None,
                args: None,
                span: Span {
                    start: 13,
                    end: 16,
                },
            },
            EnumVariant {
                annotations: [],
                name: Identifier {
                    name: "green",
                    span: Span {
                        start: 18,
                        end: 23,
                    },
                },
                type_args: [],
                constructor_name: None,
                args: None,
                span: Span {
                    start: 18,
                    end: 23,
                },
            },
            EnumVariant {
                annotations: [],
                name: Identifier {
                    name: "blue",
                    span: Span {
                        start: 25,
                        end: 29,
                    },
                },
                type_args: [],
                constructor_name: None,
                args: None,
                span: Span {
                    start: 25,
                    end: 30,
                },
            },
        ],
        members: [],
        span: Span {
            start: 0,
            end: 31,
        },
    },
)
