crates/falcon_dart_parser/tests/snapshots/parser_tests__snap_enum_with_members.snap
---
source: crates/falcon_dart_parser/tests/parser_tests.rs
expression: "prog.declarations[0]"
---
Enum(
    EnumDecl {
        annotations: [],
        name: Identifier {
            name: "Color",
            span: Span {
                start: 5,
                end: 10,
            },
        },
        type_params: [],
        with_clause: [],
        implements: [],
        variants: [
            EnumVariant {
                annotations: [],
                name: Identifier {
                    name: "red",
                    span: Span {
                        start: 13,
                        end: 16,
                    },
                },
                type_args: [],
                constructor_name: None,
                args: None,
                span: Span {
                    start: 13,
                    end: 16,
                },
            },
            EnumVariant {
                annotations: [],
                name: Identifier {
                    name: "green",
                    span: Span {
                        start: 18,
                        end: 23,
                    },
                },
                type_args: [],
                constructor_name: None,
                args: None,
                span: Span {
                    start: 18,
                    end: 23,
                },
            },
            EnumVariant {
                annotations: [],
                name: Identifier {
                    name: "blue",
                    span: Span {
                        start: 25,
                        end: 29,
                    },
                },
                type_args: [],
                constructor_name: None,
                args: None,
                span: Span {
                    start: 25,
                    end: 29,
                },
            },
        ],
        members: [
            Getter(
                GetterDecl {
                    annotations: [],
                    is_static: false,
                    is_abstract: false,
                    is_external: false,
                    is_async: false,
                    return_type: Some(
                        Named(
                            NamedType {
                                segments: [
                                    Identifier {
                                        name: "bool",
                                        span: Span {
                                            start: 31,
                                            end: 35,
                                        },
                                    },
                                ],
                                type_args: [],
                                is_nullable: false,
                                span: Span {
                                    start: 31,
                                    end: 36,
                                },
                            },
                        ),
                    ),
                    name: Identifier {
                        name: "isPrimary",
                        span: Span {
                            start: 40,
                            end: 49,
                        },
                    },
                    body: Some(
                        Arrow(
                            Binary {
                                op: NotEq,
                                left: This {
                                    span: Span {
                                        start: 53,
                                        end: 58,
                                    },
                                },
                                right: Field {
                                    object: Ident(
                                        Identifier {
                                            name: "Color",
                                            span: Span {
                                                start: 61,
                                                end: 66,
                                            },
                                        },
                                    ),
                                    field: Identifier {
                                        name: "green",
                                        span: Span {
                                            start: 67,
                                            end: 72,
                                        },
                                    },
                                    is_null_safe: false,
                                    span: Span {
                                        start: 61,
                                        end: 72,
                                    },
                                },
                                span: Span {
                                    start: 53,
                                    end: 72,
                                },
                            },
                            Span {
                                start: 50,
                                end: 74,
                            },
                        ),
                    ),
                    span: Span {
                        start: 31,
                        end: 74,
                    },
                },
            ),
        ],
        span: Span {
            start: 0,
            end: 75,
        },
    },
)
