crates/falcon_dart_parser/tests/snapshots/parser_tests__snap_factory_constructor.snap
---
source: crates/falcon_dart_parser/tests/parser_tests.rs
assertion_line: 1304
expression: "prog.declarations[0]"
---
Class(
    ClassDecl {
        annotations: [],
        modifiers: ClassModifiers {
            is_abstract: false,
            is_interface: false,
            is_base: false,
            is_final: false,
            is_sealed: false,
        },
        name: Identifier {
            name: "Singleton",
            span: Span {
                start: 6,
                end: 15,
            },
        },
        type_params: [],
        extends: None,
        with_clause: [],
        implements: [],
        members: [
            Field(
                FieldDecl {
                    annotations: [],
                    is_static: true,
                    is_abstract: false,
                    is_external: false,
                    is_covariant: false,
                    is_late: false,
                    is_final: true,
                    is_const: false,
                    field_type: Some(
                        Named(
                            NamedType {
                                segments: [
                                    Identifier {
                                        name: "Singleton",
                                        span: Span {
                                            start: 31,
                                            end: 40,
                                        },
                                    },
                                ],
                                type_args: [],
                                is_nullable: false,
                                span: Span {
                                    start: 31,
                                    end: 41,
                                },
                            },
                        ),
                    ),
                    declarators: [
                        VarDeclarator {
                            name: Identifier {
                                name: "_i",
                                span: Span {
                                    start: 41,
                                    end: 43,
                                },
                            },
                            initializer: Some(
                                Call {
                                    callee: Field {
                                        object: Ident(
                                            Identifier {
                                                name: "Singleton",
                                                span: Span {
                                                    start: 46,
                                                    end: 55,
                                                },
                                            },
                                        ),
                                        field: Identifier {
                                            name: "_",
                                            span: Span {
                                                start: 56,
                                                end: 57,
                                            },
                                        },
                                        is_null_safe: false,
                                        span: Span {
                                            start: 46,
                                            end: 57,
                                        },
                                    },
                                    type_args: [],
                                    args: ArgList {
                                        positional: [],
                                        named: [],
                                        span: Span {
                                            start: 57,
                                            end: 59,
                                        },
                                    },
                                    span: Span {
                                        start: 46,
                                        end: 59,
                                    },
                                },
                            ),
                            span: Span {
                                start: 18,
                                end: 59,
                            },
                        },
                    ],
                    span: Span {
                        start: 18,
                        end: 61,
                    },
                },
            ),
            Constructor(
                ConstructorDecl {
                    annotations: [],
                    is_const: false,
                    is_factory: true,
                    is_external: false,
                    name: Identifier {
                        name: "Singleton",
                        span: Span {
                            start: 69,
                            end: 78,
                        },
                    },
                    constructor_name: None,
                    params: FormalParamList {
                        positional: [],
                        optional_positional: [],
                        named: [],
                        span: Span {
                            start: 78,
                            end: 81,
                        },
                    },
                    initializers: [],
                    body: Some(
                        Arrow(
                            Ident(
                                Identifier {
                                    name: "_i",
                                    span: Span {
                                        start: 84,
                                        end: 86,
                                    },
                                },
                            ),
                            Span {
                                start: 81,
                                end: 88,
                            },
                        ),
                    ),
                    span: Span {
                        start: 61,
                        end: 88,
                    },
                },
            ),
            Constructor(
                ConstructorDecl {
                    annotations: [],
                    is_const: false,
                    is_factory: false,
                    is_external: false,
                    name: Identifier {
                        name: "Singleton",
                        span: Span {
                            start: 88,
                            end: 97,
                        },
                    },
                    constructor_name: Some(
                        Identifier {
                            name: "_",
                            span: Span {
                                start: 98,
                                end: 99,
                            },
                        },
                    ),
                    params: FormalParamList {
                        positional: [],
                        optional_positional: [],
                        named: [],
                        span: Span {
                            start: 99,
                            end: 101,
                        },
                    },
                    initializers: [],
                    body: None,
                    span: Span {
                        start: 88,
                        end: 103,
                    },
                },
            ),
        ],
        span: Span {
            start: 0,
            end: 104,
        },
    },
)
