crates/falcon_dart_parser/tests/snapshots/parser_tests__snap_import_directive.snap
---
source: crates/falcon_dart_parser/tests/parser_tests.rs
expression: "prog.imports[0]"
---
ImportDirective {
    annotations: [],
    uri: StringLitNode {
        raw: "'dart:core'",
        value: "dart:core",
        span: Span {
            start: 7,
            end: 18,
        },
    },
    is_deferred: false,
    as_name: None,
    combinators: [
        Show(
            [
                Identifier {
                    name: "List",
                    span: Span {
                        start: 24,
                        end: 28,
                    },
                },
                Identifier {
                    name: "Map",
                    span: Span {
                        start: 30,
                        end: 33,
                    },
                },
            ],
            Span {
                start: 19,
                end: 33,
            },
        ),
    ],
    span: Span {
        start: 0,
        end: 34,
    },
}
