crates/falcon_dart_parser/tests/snapshots/parser_tests__snap_late_final_field.snap
---
source: crates/falcon_dart_parser/tests/parser_tests.rs
assertion_line: 1344
expression: "prog.declarations[0]"
---
Class(
    ClassDecl {
        annotations: [],
        modifiers: ClassModifiers {
            is_abstract: false,
            is_interface: false,
            is_base: false,
            is_final: false,
            is_sealed: false,
        },
        name: Identifier {
            name: "Lazy",
            span: Span {
                start: 6,
                end: 10,
            },
        },
        type_params: [],
        extends: None,
        with_clause: [],
        implements: [],
        members: [
            Field(
                FieldDecl {
                    annotations: [],
                    is_static: false,
                    is_abstract: false,
                    is_external: false,
                    is_covariant: false,
                    is_late: true,
                    is_final: true,
                    is_const: false,
                    field_type: Some(
                        Named(
                            NamedType {
                                segments: [
                                    Identifier {
                                        name: "String",
                                        span: Span {
                                            start: 24,
                                            end: 30,
                                        },
                                    },
                                ],
                                type_args: [],
                                is_nullable: false,
                                span: Span {
                                    start: 24,
                                    end: 31,
                                },
                            },
                        ),
                    ),
                    declarators: [
                        VarDeclarator {
                            name: Identifier {
                                name: "value",
                                span: Span {
                                    start: 31,
                                    end: 36,
                                },
                            },
                            initializer: None,
                            span: Span {
                                start: 13,
                                end: 36,
                            },
                        },
                    ],
                    span: Span {
                        start: 13,
                        end: 38,
                    },
                },
            ),
        ],
        span: Span {
            start: 0,
            end: 39,
        },
    },
)
