crates/falcon_dart_parser/tests/snapshots/parser_tests__snap_mixin_declaration.snap
---
source: crates/falcon_dart_parser/tests/parser_tests.rs
assertion_line: 1280
expression: "prog.declarations[0]"
---
Mixin(
    MixinDecl {
        annotations: [],
        is_base: false,
        name: Identifier {
            name: "Serializable",
            span: Span {
                start: 6,
                end: 18,
            },
        },
        type_params: [],
        on_clause: [
            Named(
                NamedType {
                    segments: [
                        Identifier {
                            name: "Object",
                            span: Span {
                                start: 22,
                                end: 28,
                            },
                        },
                    ],
                    type_args: [],
                    is_nullable: false,
                    span: Span {
                        start: 22,
                        end: 29,
                    },
                },
            ),
        ],
        implements: [],
        members: [
            Method(
                MethodDecl {
                    annotations: [],
                    is_static: false,
                    is_abstract: true,
                    is_external: false,
                    is_async: false,
                    is_generator: false,
                    return_type: Some(
                        Named(
                            NamedType {
                                segments: [
                                    Identifier {
                                        name: "Map",
                                        span: Span {
                                            start: 31,
                                            end: 34,
                                        },
                                    },
                                ],
                                type_args: [
                                    Named(
                                        NamedType {
                                            segments: [
                                                Identifier {
                                                    name: "String",
                                                    span: Span {
                                                        start: 35,
                                                        end: 41,
                                                    },
                                                },
                                            ],
                                            type_args: [],
                                            is_nullable: false,
                                            span: Span {
                                                start: 35,
                                                end: 41,
                                            },
                                        },
                                    ),
                                    Dynamic {
                                        span: Span {
                                            start: 43,
                                            end: 50,
                                        },
                                    },
                                ],
                                is_nullable: false,
                                span: Span {
                                    start: 31,
                                    end: 52,
                                },
                            },
                        ),
                    ),
                    name: Identifier {
                        name: "toJson",
                        span: Span {
                            start: 52,
                            end: 58,
                        },
                    },
                    type_params: [],
                    params: FormalParamList {
                        positional: [],
                        optional_positional: [],
                        named: [],
                        span: Span {
                            start: 58,
                            end: 60,
                        },
                    },
                    body: None,
                    span: Span {
                        start: 31,
                        end: 62,
                    },
                },
            ),
        ],
        span: Span {
            start: 0,
            end: 63,
        },
    },
)
